--- a/deploy.yml
+++ b/deploy.yml
@@ -1,12 +1,12 @@
 ---
 - name: Configure Docker on Deployserver
-  hosts: [server]
+  hosts: all
   become: true
   tasks:
   - name: apt updating
     command: sudo apt update
   - name: Install python and Pip
-    command: sudo apt install -y python-pip
+    command: sudo apt install -y python3-pip
   - name: Installing Docker
     command: sudo apt-get install -y docker.io
     become: yes
